deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdk-portal-new-search
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '32k'
spec:
  ingressClassName: nginx
  rules:
    - host: new.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: fdk-portal-new-search
                port:
                  number: 8080
            path: /
            pathType: Prefix
